[REVIEW] Revisão de código: SONAR.